...
    android:padding="30dp">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="66 Chancellors Cir, Winnipeg"
        android:id="@+id/searchBar"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Search"
        android:id="@+id/searchButton"
        android:layout_below="@id/searchBar"
        android:layout_marginTop="20dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/searchButton"
        android:layout_marginTop="20dp"
        android:id="@+id/storesRecView"
        android:overScrollMode="never"/>

</RelativeLayout>
