...



    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cartRecView"
        android:layout_centerHorizontal="true"
        android:overScrollMode="never"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
...
            android:textSize="21dp"
            android:id="@+id/txtFixedTotal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtEditTotalPrice"
            android:textSize="21dp"
            android:padding="10dp"
            android:text="9.99"
            android:layout_toRightOf="@id/txtFixedTotal"
            />
        <TextView
...
