...
                    />

                <!-- Products -->
                <androidx.recyclerview.widget.RecyclerView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/productsRecView"
                        android:layout_below="@id/allergenSwitch"
                        android:layout_centerHorizontal="true"
                        android:overScrollMode="never"/>
            </RelativeLayout>


...

    </ScrollView>



    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/cart_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#53BF6C"
        android:layout_alignParentRight="true"
...
